{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 12,
  "lineage": "4a3613f3-c123-3f43-74f9-08590b2e280d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:533267012478:instance/i-089d1a1048f060392",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089d1a1048f060392",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dpp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-012546fa21b017d88",
            "private_dns": "ip-10-1-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.252",
            "public_ip": "54.196.185.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ed9aba434146aef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab07d70f5e70cd9b",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8083c8d41fe31eb"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        },
        {
          "index_key": "build-slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:533267012478:instance/i-0fa5e66ee40501fc5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa5e66ee40501fc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dpp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03cebadfbe249dfcd",
            "private_dns": "ip-10-1-1-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.195",
            "public_ip": "18.209.21.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f3cfda44279e280",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab07d70f5e70cd9b",
            "tags": {
              "Name": "build-slave"
            },
            "tags_all": {
              "Name": "build-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8083c8d41fe31eb"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        },
        {
          "index_key": "jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:533267012478:instance/i-03cb513c26052b0f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cb513c26052b0f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dpp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e1e67400a0dc388",
            "private_dns": "ip-10-1-1-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.214",
            "public_ip": "54.226.192.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08848b018e868b0d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab07d70f5e70cd9b",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8083c8d41fe31eb"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267012478:internet-gateway/igw-06e540ec21ba01fce",
            "id": "igw-06e540ec21ba01fce",
            "owner_id": "533267012478",
            "tags": {
              "Name": "dpp-igw"
            },
            "tags_all": {
              "Name": "dpp-igw"
            },
            "vpc_id": "vpc-0d4746c0f221f048a"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dpp-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267012478:route-table/rtb-02cc42529a8f7771d",
            "id": "rtb-02cc42529a8f7771d",
            "owner_id": "533267012478",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e540ec21ba01fce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4746c0f221f048a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpp-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056573ac94c0429d6",
            "route_table_id": "rtb-02cc42529a8f7771d",
            "subnet_id": "subnet-0ab07d70f5e70cd9b"
          },
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_route_table.dpp-public-rt",
            "aws_subnet.dpp-public-subnet-01",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpp-rta-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093aa995c87bcbb3c",
            "route_table_id": "rtb-02cc42529a8f7771d",
            "subnet_id": "subnet-0f515822225d07b17"
          },
          "dependencies": [
            "aws_internet_gateway.dpp-igw",
            "aws_route_table.dpp-public-rt",
            "aws_subnet.dpp-public-subnet-02",
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267012478:security-group/sg-0e8083c8d41fe31eb",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8083c8d41fe31eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SHH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "533267012478",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-prot"
            },
            "tags_all": {
              "Name": "ssh-prot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4746c0f221f048a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dpp-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267012478:subnet/subnet-0ab07d70f5e70cd9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab07d70f5e70cd9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267012478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dpp-public-subent-01"
            },
            "tags_all": {
              "Name": "dpp-public-subent-01"
            },
            "vpc_id": "vpc-0d4746c0f221f048a"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dpp-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267012478:subnet/subnet-0f515822225d07b17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f515822225d07b17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267012478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dpp-public-subent-02"
            },
            "tags_all": {
              "Name": "dpp-public-subent-02"
            },
            "vpc_id": "vpc-0d4746c0f221f048a"
          },
          "dependencies": [
            "aws_vpc.dpp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267012478:vpc/vpc-0d4746c0f221f048a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0efb75c1ff5c0e3ec",
            "default_route_table_id": "rtb-0b7c2dd329f1ef2b1",
            "default_security_group_id": "sg-0fd51d9eb2fa49320",
            "dhcp_options_id": "dopt-0955a72ef9a5029c5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4746c0f221f048a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7c2dd329f1ef2b1",
            "owner_id": "533267012478",
            "tags": {
              "Name": "dpp-vpc"
            },
            "tags_all": {
              "Name": "dpp-vpc"
            }
          }
        }
      ]
    }
  ]
}